<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QuickActions"
    android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/food"
        android:onClick="categoryClick"
        android:layout_margin="20dp"
        android:background="@drawable/button_shape"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toilets"
        android:onClick="categoryClick"
        android:layout_margin="20dp"
        android:background="@drawable/button_shape"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiet_place"
        android:onClick="categoryClick"
        android:layout_margin="20dp"
        android:background="@drawable/button_shape"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/integration_spot"
        android:onClick="categoryClick"
        android:layout_margin="20dp"
        android:background="@drawable/button_shape"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gaming_zone"
        android:onClick="categoryClick"
        android:layout_margin="20dp"
        android:background="@drawable/button_shape"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/free_wi_fi_zone"
        android:onClick="categoryClick"
        android:layout_margin="20dp"
        android:background="@drawable/button_shape"/>

</LinearLayout>